<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">

    <modelVersion>4.0.0</modelVersion>

    <parent>
        <groupId>org.springframework.boot</groupId>
        <artifactId>spring-boot-starter-parent</artifactId>
        <version>2.7.2</version>
        <relativePath/> <!-- lookup parent from repository -->
    </parent>

    <groupId>com.billion</groupId>
    <artifactId>billion-parent</artifactId>
    <version>0.0.1-SNAPSHOT</version>
    <packaging>pom</packaging>
    <name>billion</name>
    <description>billion</description>

    <properties>
        <jdk.version>18</jdk.version>
        <encoding.version>UTF-8</encoding.version>
        <spring-cloud.version>2021.0.3</spring-cloud.version>
        <maven.compiler.source>${jdk.version}</maven.compiler.source>
        <maven.compiler.target>${jdk.version}</maven.compiler.target>
        <project.build.sourceEncoding>${encoding.version}</project.build.sourceEncoding>
        <project.reporting.outputEncoding>${encoding.version}</project.reporting.outputEncoding>
        <com.baomidou.mybatis-plus-boot-starter.version>3.5.2</com.baomidou.mybatis-plus-boot-starter.version>
        <mysql-connector-java.version>8.0.29</mysql-connector-java.version>
        <com.aptos.aptos-sdk.version>1.0.0</com.aptos.aptos-sdk.version>
        <com.github.rholder.guava-retrying.version>2.0.0</com.github.rholder.guava-retrying.version>
        <org.projectlombok.lombok.version>1.18.24</org.projectlombok.lombok.version>
        <com.alibaba.fastjson2.fastjson2.version>2.0.13</com.alibaba.fastjson2.fastjson2.version>
    </properties>

    <modules>
        <module>dao</module>
        <module>framework</module>
        <module>gateway-aptos-kiko</module>
        <module>model</module>
        <module>quote</module>
        <module>service</module>
    </modules>

    <dependencies>
        <!--        <dependency>-->
        <!--            <groupId>org.springframework.cloud</groupId>-->
        <!--            <artifactId>spring-cloud-starter</artifactId>-->
        <!--        </dependency>-->

        <!--        <dependency>-->
        <!--            <groupId>org.springframework.cloud</groupId>-->
        <!--            <artifactId>spring-cloud-starter-gateway</artifactId>-->
        <!--        </dependency>-->

        <!--        <dependency>-->
        <!--            <groupId>mysql</groupId>-->
        <!--            <artifactId>mysql-connector-java</artifactId>-->
        <!--            <scope>runtime</scope>-->
        <!--        </dependency>-->


        <!--        <dependency>-->
        <!--            <groupId>org.springframework.boot</groupId>-->
        <!--            <artifactId>spring-boot-starter-test</artifactId>-->
        <!--            <scope>test</scope>-->
        <!--        </dependency>-->
    </dependencies>

    <dependencyManagement>
        <dependencies>
            <dependency>
                <groupId>org.springframework.cloud</groupId>
                <artifactId>spring-cloud-dependencies</artifactId>
                <version>${spring-cloud.version}</version>
                <type>pom</type>
                <scope>import</scope>
            </dependency>

            <dependency>
                <groupId>com.baomidou</groupId>
                <artifactId>mybatis-plus-boot-starter</artifactId>
                <version>${com.baomidou.mybatis-plus-boot-starter.version}</version>
            </dependency>

            <dependency>
                <groupId>org.projectlombok</groupId>
                <artifactId>lombok</artifactId>
                <version>${org.projectlombok.lombok.version}</version>
                <scope>provided</scope>
            </dependency>

            <dependency>
                <groupId>com.alibaba.fastjson2</groupId>
                <artifactId>fastjson2</artifactId>
                <version>${com.alibaba.fastjson2.fastjson2.version}</version>
            </dependency>

            <dependency>
                <groupId>com.github.rholder</groupId>
                <artifactId>guava-retrying</artifactId>
                <version>${com.github.rholder.guava-retrying.version}</version>
                <exclusions>
                    <exclusion>
                        <artifactId>jsr305</artifactId>
                        <groupId>com.google.code.findbugs</groupId>
                    </exclusion>
                </exclusions>
            </dependency>

            <dependency>
                <groupId>com.billion</groupId>
                <artifactId>dao</artifactId>
                <version>${project.version}</version>
            </dependency>

            <dependency>
                <groupId>com.billion</groupId>
                <artifactId>framework</artifactId>
                <version>${project.version}</version>
            </dependency>

            <dependency>
                <groupId>com.billion</groupId>
                <artifactId>model</artifactId>
                <version>${project.version}</version>
            </dependency>

            <dependency>
                <groupId>com.billion</groupId>
                <artifactId>service</artifactId>
                <version>${project.version}</version>
            </dependency>

            <dependency>
                <groupId>com.aptos</groupId>
                <artifactId>aptos-sdk</artifactId>
                <version>${com.aptos.aptos-sdk.version}</version>
            </dependency>
        </dependencies>
    </dependencyManagement>

    <build>
        <plugins>
            <plugin>
                <groupId>org.springframework.boot</groupId>
                <artifactId>spring-boot-maven-plugin</artifactId>
                <configuration>
                    <excludes>
                        <exclude>
                            <groupId>org.projectlombok</groupId>
                            <artifactId>lombok</artifactId>
                        </exclude>
                    </excludes>
                    <skip>true</skip>
                </configuration>
            </plugin>
        </plugins>
    </build>

</project>
